--- a/app/views/show_all_company/show.html.slim
+++ b/app/views/show_all_company/show.html.slim
@@ -25,17 +25,13 @@
 
           
 
-
-      
 .company-image-box
-  .borders
-    .company-height
-      = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
-    .info
+  .borders.fixed-height.clearfix
+    = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
+    .tlf-box.clearfix
+      'T: 
       = @company.phone 
       '&nbsp;|&nbsp;
       = link_to @company.homepage, 'http://'+@company.homepage
-    
-      
-br
+
 = render :partial => "shared/news", :locals => { :newsposts => @newsposts }
