--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -14,7 +14,7 @@
 		
         = link_to 'FIND OS PÅ KORT', googlemap_index_path
         br
-        = link_to 'Galleri', gallery_path(@gallery)
+        /= link_to 'Galleri', gallery_path(@gallery)
 
 
   .squared-box
