--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -24,14 +24,14 @@
       br
       = f.date_select :booking_date, :value => l((@booking.booking_date || Date.today).to_date), :readonly => true, :size=>12
     
-    .meetingrooms.top-margin
-      - Meetingroom.all.each do |meetingroom|
-        .booking-meetingroom-column
-          div style="background-color: #{meetingroom.color || 'yellow'};"
-            strong= meetingroom.title
-            br/
-            = link_to image_tag(meetingroom.image(:mini)), meetingroom
-    
+    /.meetingrooms.top-margin
+    /  - Meetingroom.all.each do |meetingroom|
+    /    .booking-meetingroom-column
+    /      div style="background-color: #{meetingroom.color || 'yellow'};"
+    /        strong= meetingroom.title
+    /        br/
+    /        = link_to image_tag(meetingroom.image(:mini)), meetingroom
+    /
 
     
     
@@ -70,6 +70,15 @@
       = f.submit 'Gem'
       -#= image_tag "loader.gif", :alt => "", :width => "32", :height => "32", :style => "display: none;", :class => 'spinner'
   
- 
 
-      div style="clear:both;"
+  .grid-11
+    .meetingrooms.top-margin
+      - Meetingroom.all.each do |meetingroom|
+        .booking-meetingroom-column
+          div style="background-color: #{meetingroom.color || 'yellow'};"
+            strong= meetingroom.title
+            br/
+            = link_to image_tag(meetingroom.image(:mini)), meetingroom
+    
+
+  div style="clear:both;"
